# notify.tsims.lol

./: .env  Dockerfile  README.md  check_updates.py  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py  get_current_year.py  login.py  report.py  score.py  tTypes.py  timetable.py
frontend/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/.output/: nitro.json
frontend/.output/public/: 200.html  404.html  index.html
frontend/.output/public/_nuxt/: IconCSS.8s_OqRbk.js  IconCSS.9px12oaI.js  IconCSS.iDYdfGaS.js  IconCSS.lqHanhB6.js  IconCSS.pPWy72vS.js  entry.3_CrUwhK.js  entry.EFgcOask.js  entry.FlP4MuYP.css  entry.esKxkeIc.css  entry.mAptvfLK.js  entry.mc1qYnyw.js  entry.rStfvU19.css  entry.uTOhgbpK.js  error-404.0Nbpwgg5.js  error-404.ZxWk153j.js  error-404.aPhgsXHp.js  error-404.uV0im_lK.js  error-404.wpw2-dHw.js  error-500.79RcoJ0u.js  error-500.GHYZOUSJ.js  error-500.LzxdLzYG.js  error-500._9y1jE54.js  error-500.nrGpSEgn.js  vue.f36acd1f.HhEvLbT7.js  vue.f36acd1f.bi5kegb6.js  vue.f36acd1f.eVKGneBp.js  vue.f36acd1f.g8X253Fq.js  vue.f36acd1f.sdQ9utZP.js
frontend/.output/public/_nuxt/builds/: latest.json
frontend/.output/public/_nuxt/builds/meta/: 0aaa3f3d-643d-4113-a002-f0c3083aee54.json  b55784d6-b047-4753-a855-bd4093898372.json  bb922e0a-0b2a-4611-b49b-8d242c084848.json  (+2 more)
frontend/assets/css/: tailwind.css
frontend/components/ui/toast/: ToastDescription.vue  ToastTitle.vue  index.ts
frontend/server/api/: [..slug].ts
ntfy/: __init__.py  send_notification.py
schemas/: User.py  __init__.py
