[tool.poetry]
name = "tsims-notify"
version = "0.1.0"
description = ""
authors = ["qwerzl <me@qwerzl.me>"]
readme = "README.md"
packages = [{include = "tsims_notify"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
requests = "^2.31.0"
aiohttp = "^3.9.1"
python-multipart = "^0.0.6"
odmantic = "^1.0.0"
nltk = "^3.8.1"
fastapi-restful = "^0.5.0"
typing-inspect = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
